operators/multiclusterobservability/manifests/endpoint-observability/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: endpoint-observability-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: endpoint-observability-operator
  template:
    metadata:
      labels:
        name: endpoint-observability-operator
    spec:
      serviceAccountName: endpoint-observability-operator-sa
      containers:
        - name: endpoint-observability-operator
          # Replace this with the built image name
          image: REPLACE_WITH_OPERATOR_IMAGE
          command:
          - endpoint-monitoring-operator
          resources:
            requests:
              cpu: 2m
              memory: 50Mi
          imagePullPolicy: Always
          ports:
          - containerPort: 8383
            name: metrics
            protocol: TCP
          volumeMounts:
            - name: hub-kubeconfig-secret
              mountPath: "/spoke/hub-kubeconfig"
              readOnly: true
      volumes:
        - name: hub-kubeconfig-secret
          secret:
            secretName: observability-controller-hub-kubeconfig
