operators/multiclusterobservability/manifests/endpoint-observability/networkpolicy-endpoint-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: endpoint-observability-operator
  # namespace set by loadTemplates → spokeNameSpace
spec:
  podSelector:
    matchLabels:
      name: endpoint-observability-operator
  policyTypes:
    - Ingress
    - Egress
  ingress: [] # deny all ingress
  egress:
    - {} # allow all egress
