operators/multiclusterobservability/manifests/endpoint-observability/networkpolicy-uwl-metrics-collector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: uwl-metrics-collector
  # namespace set by loadTemplates → spokeNameSpace
spec:
  podSelector:
    matchLabels:
      component: uwl-metrics-collector
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
  egress:
    - {}
